css/style.css
/* ... */
body {
  font-family: "Open Sans", sans-serif;
  font-weight: normal;
  font-style: normal;
}
.img {
  max-width: 100%;
  transition: all 0.3s ease-out 0s;
}
.f-left {
  float: left;
}
.f-right {
  float: right;
}
.fix {
  overflow: hidden;
}
a,
button {
  -webkit-transition: all 0.3s ease-out 0s;
  -moz-transition: all 0.3s ease-out 0s;
  -ms-transition: all 0.3s ease-out 0s;
  -o-transition: all 0.3s ease-out 0s;
  transition: all 0.3s ease-out 0s;
}
a:focus,
.button:focus {
  text-decoration: none;
  outline: none;
}
a:focus,
a:hover,
.portfolio-cat a:hover,
.footer -menu li a:hover {
  color: #2b96cc;
  text-decoration: none;
}
a,
button {
  color: #1696e7;
  outline: medium none;
}
.uppercase {
  text-transform: uppercase;
}
.capitalize {
  text-transform: capitalize;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Gilroy-Bold";
  font-weight: normal;
  color: #131314;
  margin-top: 0px;
  font-style: normal;
  font-weight: 700;
  text-transform: normal;
}
h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  color: inherit;
}
h1 {
  font-size: 40px;
  font-weight: 500;
}
h2 {
  font-size: 35px;
}
h3 {
  font-size: 28px;
}
h4 {
  font-size: 22px;
}
h5 {
  font-size: 18px;
}
h6 {
  font-size: 16px;
}
ul {
  margin: 0px;
  padding: 0px;
}
li {
  list-style: none;
}
p {
  font-size: 18px;
  font-weight: normal;
  line-height: 30px;
  color: #7c7790;
  margin-bottom: 15px;
}
hr {
  border-bottom: 1px solid #eceff8;
  border-top: 0 none;
  margin: 30px 0;
  padding: 0;
}
label {
  color: #7e7e7e;
  cursor: pointer;
  font-size: 14px;
  font-weight: 400;
}
*::-moz-selection {
  background: #d6b161;
  color: #fff;
  text-shadow: none;
}
::-moz-selection {
  background: #444;
  color: #fff;
  text-shadow: none;
}
::selection {
  background: #444;
  color: #fff;
  text-shadow: none;
}
*::-moz-placeholder {
  color: #555555;
  font-size: 14px;
  opacity: 1;
}
*::placeholder {
  color: #555555;
  font-size: 14px;
  opacity: 1;
}
.pos-relative {
  position: relative;
}
.pos-absolute {
  position: absolute;
}
/* button style */
.default-btn {
  color: #fff;
  font-size: 16px;
  font-family: "Gilroy-Bold";
  border: 2px solid transparent;
  height: 50px;
  padding: 0 35px;
  line-height: 45px;
  display: inline-block;
  text-decoration: none;
  border-radius: 33px;
  background-color: #515bf9;
  transition: all 0.3s;
}
.default-btn:hover {
  color: #515bf9;
  background-color: #fff;
  border-color: #515bf9;
}
/* header area */
.header-transparent {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 999;
}
.header-area.sticky {
	left: 0;
	margin: auto;
	position: fixed !important;
	top: 0;
	width: 100%;
	box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
	-webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
  -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
  -webkit-animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
	animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
	background: #ffffff;
	z-index: 99;
}
.header-area.sticky .header-btn {
	margin-top: 33px;
}
.header-area.sticky .main-menu ul li a {
	padding: 45px 0;
}
.header-btn {
  margin-top: 68px;
  margin-left: 50px;
}
.header-btn a {
  color: #131314;
  font-size: 16px;
  font-family: "Gilroy-Bold";
  border: 2px solid #515bf9;
  height: 50px;
  padding: 0 35px;
  line-height: 45px;
  display: inline-block;
  text-decoration: none;
  border-radius: 33px;
  background-color: #fff;
  transition: all 0.3s;
}
.header-btn a:hover {
  background-color: #515bf9;
  color: #fff;
}
.main-menu ul li {
  display: inline-block;
  margin-left: 50px;
}
.main-menu ul li a {
  color: #131314;
  font-size: 18px;
  font-family: "Gilroy-Bold";
  padding: 80px 0;
  display: block;
  text-decoration: none;
}
.main-menu ul li:hover > a {
  color: #515bf9;
}
/* slider area */
.popup-icon .popup {
  position: absolute;
  z-index: 99;
}
.popup-icon .popup.popup_one {
	top: 55%;
	left: 48%;
}
.popup-icon .popup.popup_two {
	top: 21%;
	left: 75%;
}
.popup-icon .popup.popup_three {
	top: 63%;
	left: 76%;
}
.popup-icon .popup {
  -webkit-animation: slider-popup-animation 1s linear infinite alternate;
  -moz-animation: slider-popup-animation 1s linear infinite alternate;
  -o-animation: slider-popup-animation 1s linear infinite alternate;
  animation: slider-popup-animation 1s linear infinite alternate;
}
@keyframes slider-popup-animation {
  0% {
    transform: translateY(-20px);
  }
  100% {
    transform: translateY(0px);
  }
}
.slider-height {
  height: 1080px;
}
.slider-text h2 {
  font-size: 48px;
  line-height: 96px;
  margin-bottom: 20px;
}
.slider-text h2 > span {
  color: #515bf9;
  font-size: 84px;
  display: block;
}
.slider-text > span {
  color: #131314;
  font-size: 30px;
  font-weight: 600;
  margin-bottom: 14px;
  display: block;
}
.slider-text p {
  font-size: 24px;
  line-height: 36px;
}
.slider-btn a {
  font-size: 18px;
}
/* about area */
.about-text span {
  color: #515bf9;
  font-family: "Gilroy-Bold";
  font-size: 24px;
  display: block;
  margin-bottom: 5px;
}
.about-text h3 {
  font-size: 48px;
  margin-bottom: 30px;
}
.about-text p {
  text-align: justify;
  margin-bottom: 30px;
}
/* skill area */
.skill-wrapper {
  transition-timing-function: linear !important;
}
.single-skill{
	text-align: center;
  cursor: pointer;
}
.single-skill img {
	width: 80px;
  transform: scale(1);
  transition: .3s;
  opacity: 0.7;
}
.single-skill:hover img {
  transform: scale(1.1);
  opacity: 1;
}
/* project area */
.project-img img {
  width: 100%;
}
.project-img::before {
  content: "";
  background: rgba(81, 91, 249, 0);
  backdrop-filter: blur(0);
  -webkit-backdrop-filter: blur(0);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transition: 0.3s;
  opacity: 1;
  border-radius: 8px;
}
.single-project:hover .project-img::before {
  background: rgba(81, 91, 249, 0.15);
  backdrop-filter: blur(8px);
  cursor: pointer;
}
/* ... */

